# Kukku

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/auth/: router.py  service.py
app/bot/: bridge.py  telegram_bot.py
app/core/: agent.py  events.py  llm.py  scheduler.py  voice.py
app/dashboard/: api.py  chat_api.py  modules_api.py
app/db/: database.py
app/search/: extractors.py  file_search.py  indexer.py  (+1 more)
cloud/: package.json  worker.js  wrangler.toml
docs/: AI_ARCHITECTURE.md  API_REFERENCE.md  ARCHITECTURE.md  CI.md  DATABASE.md  EXTENDING.md  FAQ.md  FEATURES.md  GLOSSARY.md  INSTALL.md  NEXT_STEPS.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  README.md  RECOVERY.md  ROADMAP.md  SECURITY.md  TECH_STACK.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  WEB_DASHBOARD.md  WORKFLOW.md
scripts/: com.manish.jarvis.plist  disable_cloud.sh  set_password.py  setup_cloud.sh  start.sh  web.sh
tests/: conftest.py  preview_dashboard.py  test_agent.py  test_auth.py  test_bridge.py  test_chat_api.py  test_config.py  test_dashboard_api.py  test_dashboard_auth.py  test_database.py  test_extractors.py  test_failover.py  test_file_search.py  test_llm_providers.py  test_local_commands.py  test_modules_api.py  test_scheduler.py  test_weather.py  test_web_search.py
web/: .env.example  README.md  package-lock.json  package.json
(+28 files in other folders)
